Update repository name and description in build.yml
Signed-off-by: L <euluan1912@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,8 +63,8 @@ jobs:
 
                   # 6. CRIA o manifesto principal (repo.json)
                   echo "{
-                    \"name\": \"CloudStream Brasil Repo\",
-                    \"description\": \"Repositório Brasileiro de Provedores CloudStream\",
+                    \"name\": \"lietrepo\",
+                    \"description\": \"repositório BR do cloudstream\",
                     \"manifestVersion\": 1,
                     \"pluginLists\": $PLUGINS_LIST
                   }" > builds/repo.json
