--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,56 +1,81 @@
-# .github/workflows/build.yml
-name: Build Test (Sem Secrets)
+name: build do L
 
 on:
-  push:
-    branches:
-      - main
-      - develop
-  pull_request:
-    branches:
-      - main
+push:
+branches:
+- main
+workflow_dispatch:
 
 jobs:
-  build-test:
-    runs-on: ubuntu-latest
-    # SEM permissão de write - não pode commitar
-    permissions:
-      contents: read  # Apenas leitura
+build:
+runs-on: ubuntu-latest
+permissions:
+contents: write
 
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: 'gradle'
+steps:  
+  # 1. CHECKOUT  
+  - uses: actions/checkout@v4  
+    with:  
+      token: ${{ secrets.GITHUB_TOKEN }}  
+    
+   # 2. SETUP JAVA  
+  - name: Set up JDK 17  
+    uses: actions/setup-java@v4  
+    with:  
+      java-version: '17'  
+      distribution: 'temurin'  
+      cache: 'gradle'  
 
-      - name: Grant execute permission
-        run: chmod +x gradlew
+  - name: Grant execute permission for gradlew  
+    run: chmod +x gradlew  
 
-      # NÃO injeta secrets - usa placeholder ou chave de teste
-      - name: Setup Test Environment
-        run: |
-          echo "Usando ambiente de TESTE (sem chaves reais)"
-          
-          # Cria chave de teste/fake para compilação
-          TEST_KEY="TMDB_TEST_KEY_PLACEHOLDER_123"
-          
-          # Substitui placeholder por chave de TESTE
-          find . -name "*.kt" -type f -exec sed -i \
-            "s/{{TMDB_API_KEY}}/$TEST_KEY/g" {} +
-          
-          echo "✅ Ambiente de teste configurado"
+  # 3. BUILD  
+  - name: Build with Gradle  
+    env:
+      TMDB_API_KEY: ${{ secrets.TMDB_API_KEY }}
+    run: ./gradlew assemble --refresh-dependencies --info --stacktrace  
 
-      - name: Test Build (Verifica apenas se compila)
-        run: ./gradlew assembleDebug --info
-        # Usa 'assembleDebug' em vez de 'assemble' para ser mais rápido
+  # 4. GERAÇÃO DOS MANIFESTOS  
+  - name: Generate plugins.json  
+    run: ./gradlew makePluginsJson -PoutputFile="build/plugins.json"  
 
-      - name: Verify Build Output
-        run: |
-          echo "📋 Verificando saída do build:"
-          find . -name "*.apk" -o -name "*.cs3" | head -5 || echo "⚠️ Nenhum arquivo gerado (normal para build de teste)"
-          
-      # 🚫 NÃO faz deploy - apenas verifica se compila
+  # 5. CRIAÇÃO DO REPO + CORREÇÃO DE URLs  
+  - name: Move, Fix URLs and Create repo.json  
+    run: |  
+      # Base RAW do GitHub para downloads  
+      REPO_BASE_URL="https://github.com/${{ github.repository }}/raw/refs/heads/main/builds"  
+      PLUGINS_LIST="[\"$REPO_BASE_URL/plugins.json\"]"  
+
+      mkdir -p builds  
+      mv build/plugins.json builds/plugins.json  
+
+      # Escapa a URL para uso no sed  
+      REPO_BASE_URL_ESCAPED=$(echo $REPO_BASE_URL | sed 's/\//\\\//g')  
+
+      # Corrige URLs internas do plugins.json (.cs3)  
+      sed -i -E 's|"url": "[^"]*/([^/]+)\.cs3"|"url": "'"$REPO_BASE_URL_ESCAPED"'/\1.cs3"|g' builds/plugins.json  
+
+      # Corrige URLs internas do plugins.json (.jar)  
+      sed -i -E 's|"jarUrl": "[^"]*/([^/]+)\.jar"|"jarUrl": "'"$REPO_BASE_URL_ESCAPED"'/\1.jar"|g' builds/plugins.json  
+
+      # Cria repo.json final  
+      echo "{  
+        \"name\": \"lietrepo\",  
+        \"icon\": \"https:\/\/github.com\/lawlietbr.png\",  
+        \"description\": \"Repositório BR do CloudStream\",  
+        \"manifestVersion\": 1,  
+        \"pluginLists\": $PLUGINS_LIST  
+      }" > builds/repo.json  
+
+      # Copia os arquivos compilados  
+      find . -type f -name "*.cs3" -exec cp {} builds/ \; || true  
+      find . -type f -name "*.jar" -exec cp {} builds/ \; || true  
+
+  # 6. DEPLOY (COMMIT AUTOMÁTICO)  
+  - name: Commit providers to main  
+    uses: stefanzweifel/git-auto-commit-action@v5  
+    with:  
+      commit_message: "Deploy: lietrepo"  
+      branch: main  
+      file_pattern: builds/*
+
